+ Adam Smith: Wealth of Nations.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1617,6 +1617,40 @@
       </li>
     </ul>
 
+    <h2>Adam Smith</h2>
+    <p>Adam Smith's economic theory is too often reduced to the theory of the &ldquo;invisible hand&rdquo;.
+      What did Smith really write in <i class="booktitle">The Wealth of Nations</i>?
+      <!-- see also "How to Enrich a Country: Free Trade or Protectionism?" The School of Life, 20 March 2017: https://www.youtube.com/watch?v=5ITyd1Pzek0 -->
+    </p>
+    <ul>
+      <li>Smith, Adam: 
+        <i class="booktitle">The Wealth of Nations. Books I–III</i>.
+        Penguin, 1982. (576 pages)
+        <a href="https://www.penguin.co.uk/books/34072/the-wealth-of-nations/"><abbr>ISBN</abbr> ?</a>
+      </li>
+      <li>
+        <i class="booktitle">The Wealth of Nations. Books IV–V</i>.
+        Penguin, 1999. (672 pages)
+        <a href="https://www.penguin.co.uk/books/34374/the-wealth-of-nations/9780140436150/"><abbr>ISBN</abbr> ?</a>
+      </li>
+      <li>Roberts, Russ: 
+        <i class="booktitle">How Smith Can Change Your Life: An Unexpected Guide to Human Nature and Happiness</i>.
+        Penguin, 2015. (272 pages)
+        <a href="https://www.penguin.co.uk/books/213406/how-adam-smith-can-change-your-life/"><abbr>ISBN</abbr> ?</a>
+      </li>
+      <li>Backhouse, Roger E.: 
+        <i class="booktitle">The Penguin History of Economics</i>.
+        Penguin, 2002. (384 pages)
+        <a href="https://www.penguin.co.uk/books/23148/the-penguin-history-of-economics/9780140260427/"><abbr>ISBN</abbr>: 9780140260427</a>
+      </li>
+      <!-- 
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr>: </a>
+      </li>
+      -->
+    </ul>
+
     <h3>Geopolitics</h3>
     <ul>
       <li>Copeland, Miles:
