Why literary theory? Cf. Belsey.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -334,6 +334,12 @@
         <a href="https://sites.ualberta.ca/~dmiall/reading/readingm.htm">Reader Response Research: Empirical research on literary reading</a>.
       </li>
     </ul>
+    <p>From the blurb of Catherine Belsey's book 
+      <i class="booktitle">Shakespeare in Theory and Practice</i> (Edinburgh University Press, 2010):
+    </p>
+    <blockquote><p>Theory is valuable to the degree that it enables us to read differently: 
+      a nuanced approach shows that the most obvious interpretation is never the whole story.</p>
+    </blockquote>
 
 
     <h2 id="got">Pop Culture: Game of Thrones</h2>
