Additions re. Literary Theory.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -333,8 +333,42 @@
       <li>Miall, David S.; Kuiken, Don (University of Alberta):
         <a href="https://sites.ualberta.ca/~dmiall/reading/readingm.htm">Reader Response Research: Empirical research on literary reading</a>.
       </li>
+      <li>Tallis, Raymond:
+        <i class="booktitle">Not Saussure: A Critique of Post-Saussurean Literary Theory</i>.
+        Second edition. Palgrave Macmillan, 1995. (XXIII + 273 pages)
+        <a href="http://www.palgrave.com/de/book/9780333639269"><abbr>ISBN</abbr> 978-0-333-63926-9</a>.
+        <br />Publisher description:
+        <q>This work subjects the fundamental ideas of Derrida, Lacan, Barthes and their followers to an examination and demonstrates the baselessness of post-Saussurean claims about the relations between language, reality and self.</q>
+        <!-- recommended at https://www.quora.com/Is-literary-theory-any-theory-at-all?share=1 -->
+      </li>
+      <li>Selden, Raman; Widdowson, Peter; Brooker, Peter:
+        <i class="booktitle">A Reader's Guide to Contemporary Literary Theory</i>. 6th edition.
+        Routledge, 2017. (308 pages)
+        <a href="https://www.routledge.com/A-Readers-Guide-to-Contemporary-Literary-Theory-6th-Edition/Selden-Widdowson-Brooker/p/book/9781138917460"><abbr>ISBN</abbr> 9781138917460</a>.
+        <br />In spite of the word &ldquo;contemporary&rdquo; in the title, the book also covers
+        early- to mid-20th-century theories such as New Criticism and Russian formalism.
+      </li>
+      <li>Lane, Richard J., editor:
+        <i class="booktitle">Global Literary Theory:An Anthology</i>.
+        Routledge, 2013. (944 pages)
+        <a href="https://www.routledge.com/Global-Literary-Theory-An-Anthology/Lane/p/book/9780415783026"><abbr>ISBN</abbr> 9780415783026</a>.
+      </li>
     </ul>
-    <p>From the blurb of Catherine Belsey's book 
+    <p>People sometimes ask why we need literary theory. Here is one answer (posted on a mailing list in 18 September 1995):</p>
+    <blockquote><p>My short (perhaps equally naive) answer to a very complex question is 
+      that literary theory (<abbr>l.t.</abbr>) is a body of (more or less coherent) 
+      assumptions about what literature is, how and why to read and study it. 
+      These very general theoretical postulates can then be applied to/on 
+      different levels of the study of literature.</p>
+    <p>Looking at it in practical terms, literary theory more or less tries to 
+      theorize and systematize the conceptual frameworks shared by different 
+      (Western) literatures, like "poetic language", "poetry", "sonnet", 
+      "novel", "stream of consciousness", "metre", "character", "Modernism", 
+      "literary period", "literary history", "interpretation", etc.
+    </p>
+    <cite><a href="http://lists.village.virginia.edu/lists_archive/Humanist/v09/0141.html">Humanist Discussion Group, Vol. 9, No. 167.</a></cite>
+    </blockquote>
+    <p>Here is another point of view, from the blurb of Catherine Belsey's book 
       <i class="booktitle">Shakespeare in Theory and Practice</i> (Edinburgh University Press, 2010):
     </p>
     <blockquote><p>Theory is valuable to the degree that it enables us to read differently: 
