--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1608,12 +1608,18 @@
       <li lang="de">Marx, Karl:
         <i class="booktitle">Das Kapital. Kritik der politischen Ökonomie</i>. 
         Im Zusammenhang ausgewählt und eingeleitet von Benedikt Kautsky. Stuttgart: Alfred Kröner, 1969.
-        <!-- @@ISBN -->
+        7., verbesserte Auflag, 2011. (844 Seiten)
+        <a href="http://www.kroener-verlag.de/details/product/das-kapital/"><abbr>ISBN</abbr> 978-3-520-06407-3</a>.
       </li>
       <li lang="de">Berger, Michael: 
         <i class="booktitle">Karl Marx</i>. <abbr>UTB</abbr> Profile. <abbr>UTB</abbr> 3010. 
         Paderborn: Wilhelm Fink, 2008.
         <!-- @@ISBN -->
+      </li>
+      <li>Tucker, Robert C., editor:
+        <i class="booktitle">The Marx-Engels Reader</i>. 2nd edition.
+        Norton, 1978. (832 pages)
+        <a  href="http://books.wwnorton.com/books/webad.aspx?id=12275"><abbr>ISBN</abbr> 978-0-393-09040-6</a>.
       </li>
     </ul>
 
