+ The Book of Lord Shang.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -132,6 +132,20 @@
       </li>
     </ul>
 
+    <h4>The Book of Lord Shang / Shangjun shu</h4>
+    <p>The political theory of the Qin kingdom and the Qin dynasty is known as
+      <a href="https://en.wikipedia.org/wiki/Legalism_%28Chinese_philosophy%29">Legalism (<span lang="zh-Hans">法家</span>)</a>.
+      <i style="booktitle">The Book of Lord Shang</i> is regarded as a foundational work of this theory.
+      Lord Shang has sometimes been described as the Chinese Machiavelli.
+    </p>
+    <ul>
+      <li lang="de">Vogelsang, Kai, <span lang="en">editor</span>:
+        <i class="booktitle">Shangjun shu. Schriften des Fürsten von Shang</i>.
+        Suttgart: Kröner, 2017.
+        <a href="http://www.kroener-verlag.de/details/product/shangjun-shu/"><abbr>ISBN</abbr> 978-3-520-16801-6</a>.
+      </li>
+    </ul>
+
     <h4>The Dunhuang Caves / Mogao</h4>
     <ul>
       <li>
