--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1173,6 +1173,25 @@
       <li>To do: find research articles that support or contradict Thor Heyerdahl's findings.</li>
     </ul>
 
+    <h4>Machiavelli</h4>
+    <p>Machiavelli's name is usually used as a by-word for a type of politics in which
+      the end justifies the means. This simplification does not do justice to his legacy.
+    </p>
+    <ul>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Consequentialism">Consequentialism</a>: article on Wikipedia.
+        <a href="https://en.wikipedia.org/wiki/Niccol%C3%B2_Machiavelli">Machiavelli</a> is listed as a notable consequentialist.
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/The_Prince"><i class="booktitle">The Prince</i></a>: article on Wikipedia.
+      </li>
+      <li>Machiavelli, Niccolò:
+        <i class="booktitle">The Prince</i>. ranslated by Peter Bondanella and Edited by Maurizio Viroli.
+        Oxford University Press, 2008.
+        <a href="https://global.oup.com/academic/product/the-prince-9780199535699"><abbr>ISBN</abbr> 9780199535699</a>.
+      </li>
+    </ul>
+
     <h2 id="language">Language</h2>
     <!-- @@todo add: Shakespeare's language -->
     <ul>
