More links about quortos and folios.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1005,7 +1005,13 @@
     <h4>Shakespeare and the Pirates</h4>
     <p>In other words: Shakespeare's plays: from manuscript to stage to print.</p>
     <ul>
-      <li>Wikipedia: First Folio, False Folio, Bad Quarto (usually a pirated edition), etcetera.
+      <li>Wikipedia: 
+        <a href="https://en.wikipedia.org/wiki/First_Folio">First Folio</a>, 
+        <a href="https://en.wikipedia.org/wiki/False_Folio">False Folio</a>, 
+        <a href="https://en.wikipedia.org/wiki/Bad_quarto">Bad quarto</a> (usually a pirated edition), 
+        <a href="https://en.wikipedia.org/wiki/Memorial_reconstruction">memorial reconstruction</a>,
+        <a href="https://en.wikipedia.org/wiki/Hinman_collator">Hinman collator</a>,
+        etcetera.
       </li>
       <li>Pollard, Alfred William:
         <i class="booktitle">Shakespeare's Fight With the Pirates and the Problems of the Transmission of His Text</i>. 
@@ -1050,6 +1056,11 @@
         <i class="booktitle">Applause First Folio of Shakespeare in Modern Type</i>.
         Applause Theatre &amp; Cinema Books. (1184 pages).
         <a href="https://www.halleonardbooks.com/product/viewproduct.action?itemid=314423&subsiteid=166"><abbr>ISBN</abbr> 9781557833334</a>.
+      </li>
+      <li>University of Chicago Library:
+        <a href="https://www.lib.uchicago.edu/efts/OTA-SHK/">First Folio of Shakespeare: Prepared by Charlton Hinman. Published by The Oxford Text Archive</a>:
+        search interface for the text of the First Folio.
+        <!-- See also ARTFL Project: http://artfl-project.uchicago.edu/ -->
       </li>
       <!-- 
         * Editing, Performance, Texts: New Practices in Medieval and Early Modern English Drama. Palgrave Macmillan, 2004. https://www.amazon.de/Editing-Performance-Texts-Practices-Medieval/dp/1349457639/ 
