More Machiavelli references.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1197,9 +1197,25 @@
         <a href="https://en.wikipedia.org/wiki/The_Prince"><i class="booktitle">The Prince</i></a>: article on Wikipedia.
       </li>
       <li>Machiavelli, Niccolò:
-        <i class="booktitle">The Prince</i>. ranslated by Peter Bondanella and Edited by Maurizio Viroli.
+        <i class="booktitle">The Prince</i>. Translated by Peter Bondanella and Edited by Maurizio Viroli.
         Oxford University Press, 2008.
         <a href="https://global.oup.com/academic/product/the-prince-9780199535699"><abbr>ISBN</abbr> 9780199535699</a>.
+      </li>
+      <li>Skinner, Quentin:
+        <a href="https://www.youtube.com/watch?v=gH-NxQmf87k">How Machiavellian was Machiavelli?</a>,
+        public lecture at the University of York, 12 February 2013.
+      </li>
+      <li>Mansfield, Harvey:
+        <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
+        interview by Bill Kristoll. (67 minutes, uploaded on 6 December 2015.)
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=163CxqQpqAM">Is Machiavelli's "The Prince" Still Relevant? Modern Philosophy and Leadership - Analysis</a>,
+        1999 (58 minutes).
+      </li>
+      <li>The School of Life / Alain de Botton:
+        <a href="https://www.youtube.com/watch?v=AOXl0Ll_t9s">Niccolò Machiavelli</a> (7 minutes),
+        <a href="https://www.youtube.com/watch?v=GTQlnmWCPgA">Machiavelli’s Advice For Nice Guys</a> (5 minutes).
       </li>
     </ul>
 
