--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1032,9 +1032,9 @@
         Oxford University Press, 2016. (400 pages).
         <a href="https://global.oup.com/academic/product/shakespeares-first-folio-9780198754367"><abbr>ISBN</abbr> 9780198754367</a>.
       </li>
-      <li>Smith, Emma:
+      <li>Smith, Emma, editor:
         <i class="booktitle">The Cambridge Companion to Shakespeare's First Folio</i>. Cambridge Companions to Literature.
-        Cambridge University Press, 2016. 
+        Cambridge University Press, 2016. (218 pages)
         <a href="http://www.cambridge.org/us/academic/subjects/literature/renaissance-and-early-modern-literature/cambridge-companion-shakespeares-first-folio?format=PB"><abbr>ISBN</abbr> 9781107491687</a>.
       </li>
       <li>West, Anthony James:
