Andrew Chapman's intro to philosophy of science.

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -271,6 +271,11 @@
         <a href="https://en.wikipedia.org/wiki/Bryan_Magee">Bryan Magee</a>
         that were broadcast by the <abbr>BBC</abbr> in the 1980s.
       </li>
+      <li>Andrew D. Chapman:
+        <a href="https://www.youtube.com/playlist?list=PLMfB6WI9uMzm2pFjYPScW6sCIK8YifTFA">Introduction to the Philosophy of Science</a>:
+        a YouTube playlist containing 14 videos that vary in length between 22 and 45 minutes.
+        <a href="http://andrewdchapman.org/">Andrew Chapman</a> is lecturer in philosophy at the University of Colorado, Boulder.
+      </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PL4O7bFNxwUHpxnd77NrkTMeJV67vd1n_p"
         lang="de">Wissenschaftstheorie</a>
