Literature: 2 books by Marjorie Garber.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -349,9 +349,20 @@
         early- to mid-20th-century theories such as New Criticism and Russian formalism.
       </li>
       <li>Lane, Richard J., editor:
-        <i class="booktitle">Global Literary Theory:An Anthology</i>.
+        <i class="booktitle">Global Literary Theory: An Anthology</i>.
         Routledge, 2013. (944 pages)
         <a href="https://www.routledge.com/Global-Literary-Theory-An-Anthology/Lane/p/book/9780415783026"><abbr>ISBN</abbr> 9780415783026</a>.
+      </li>
+      <li>Garber, Marjorie:
+        <i class="booktitle">The Use and Abuse of Literature</i>.
+        Anchor 2012. (336 pages)
+        <a href="http://www.penguinrandomhouse.com/books/57931/the-use-and-abuse-of-literature-by-marjorie-garber/"><abbr>IBN</abbr> 9780307277121</a>.
+        <!-- "A mild disappointment" according to Amazon.com reviewer J. Marlin -->
+      </li>
+      <li>Garber, Marjorie:
+        <i class="booktitle">A Manifesto for Literary Studies</i>.
+        Short Studies from the Walter, 2004. (69 pages)
+        <abbr>ISBN</abbr> 978-0295983448.
       </li>
     </ul>
     <p>People sometimes ask why we need literary theory. Here is one answer (posted on a mailing list in 18 September 1995):</p>
