Garber: Shakespeare after All.

--- a/lijst.html
+++ b/lijst.html
@@ -257,6 +257,11 @@
       Penguin, 2002. (576 pages)
       <a href="https://www.penguin.co.uk/books/33717/the-metamorphoses/9780140422306/"><abbr>ISBN</abbr> 978-0140422306</a>.
     </li>
+    <li>Garber, Marjorie:
+      <i class="booktitle">Shakespeare After All</i>.
+      Anchor, 2005. (1008 pages)
+      <a href="http://www.penguinrandomhouse.com/books/57928/shakespeare-after-all-by-marjorie-garber/"><abbr>ISBN</abbr> 9780385722148</a>.
+    </li>
     <li>Craig, Hugh; Kinney, Arthur F. (editors): <i class="booktitle">Shakespeare, Computers, and the Mystery of Authorship</i>.
       Cambridge University Press, 2012.
       <a href="http://www.cambridge.org/de/academic/subjects/literature/english-literature-general-interest/shakespeare-computers-and-mystery-authorship?format=PB"><abbr>ISBN</abbr> 9781107407084</a>.
