More about Machiavelli.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1217,6 +1217,17 @@
         <a href="https://www.youtube.com/watch?v=AOXl0Ll_t9s">Niccolò Machiavelli</a> (7 minutes),
         <a href="https://www.youtube.com/watch?v=GTQlnmWCPgA">Machiavelli’s Advice For Nice Guys</a> (5 minutes).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=nzUhICZPG9Q">The two sides of Niccolò Machiavelli</a>,
+        an 8-minute video on the channel <i class="youtubechannel">Inventing Civilization</i>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=r4zXb0oQwik">Machiavelli with Philip C. Bobbitt - Conversations with History </a>,
+        55-minute video by University of California Television (<abbr>UCTV</abbr>).
+        Bobbitt is the author of
+        <i class="booktitle">The Garments of Court and Palace: Machiavelli and the World That He Made</i>.
+      </li>
+      <!-- https://www.youtube.com/watch?v=u2FANdhTDyI 10. New Modes and Orders: Machiavelli's The Prince (chaps. 1-12)  - YaleCourses -->
     </ul>
 
     <h2 id="language">Language</h2>
