--- a/lijst.html
+++ b/lijst.html
@@ -59,6 +59,16 @@
       [2001] Routlege, 2014.
       <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.
     </li>
+    <li>Scholar, Richard:
+      <i class="booktitle">Montaigne and the Art of Free-Thinking</i>.
+      Peter Lang, 2016. (234 pages)
+      <a href="https://www.peterlang.com/view/product/11380"><abbr>ISBN</abbr> 9781906165208</a>.
+    </li>
+    <li>Bakewell, Sarah:
+      <i class="booktitle">How to Live: A Life of Montaigne in one question and twenty attempts at an answer</i>.
+      Vintage, 2011. (400 pages)
+      <a href="https://www.penguin.co.uk/books/1036899/how-to-live/"><abbr>ISBN</abbr> 9780099485155</a>.
+    </li>
     <li>Booth, Wayne C.; Colomb, Gregory C.; Williams, Joseph M.: 
       <i class="booktitle">The Craft of Research</i>.
       4th edition. University of Chicago Press, 2016.
