L.  Krauss: Why Schools Should Teach Skepticism
Lawrence Kraus: Why Schools Should Teach Skepticism Above Obedience (Big
Think).

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -833,6 +833,13 @@
         <a href="http://www.prometheusbooks.com/index.php?main_page=product_info&cPath=1&products_id=2067"><abbr>ISBN</abbr> 978-1-61614-397-8</a>.
         <!-- Laurence A. Moran invites Christopher DiCarlo to give many lectures in his course on critical thinking: http://sandwalk.blogspot.de/2012/09/john-wilkins-defends-philosophy-begging.html -->
       </li>
+      <li>Krauss, Lawrence M.:
+        <a href="https://www.youtube.com/watch?v=RhZ-WN35O4E">Why Schools Should Teach Skepticism Above Obedience</a>,
+        a short video by Big Think (on YouTube, 2 June 2017).
+        See also 
+        <a href="http://bigthink.com/videos/lawrence-krauss-why-schools-should-teach-skepticism-above-obedience">Why Schools Should Teach Skepticism Above Obedience</a>
+        on the <i class="website">Big Think website</i>.
+      </li>
       <li>
         <a href="http://www.skepticsfieldguide.net/">The Skeptic's Field Guide</a>.
       </li>
