--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -610,6 +610,12 @@
         <a href="http://thevermilion.com/science-needs-philosophy/">Science needs philosophy</a>,
         <i class="website">The Vermillion</i>, 10.06.2014.
       </li>
+      <li>Papineau, David:
+        <a href="http://www.the-tls.co.uk/articles/public/philosophy-simply-harder-science/">Is philosophy simply harder than science?</a>,
+        <i class="magazine"><abbr title="Times Literary Supplement">TLS</abbr> Online</i>, 1 June 2017.
+        <br />Points out that philosophy tackles problems that are inherently difficult.
+        Intractable problems also arise in the sciences, but scientists often prefer to ignore them.
+      </li>
       <li>Wilson, Edward Osborne:
         <a href="https://www.youtube.com/watch?v=lx26k8LTCdI">Science, Not Philosophy, Will Explain the Meaning of Existence</a>.
         In this 10-minute video, the biologist
