--- a/index.html
+++ b/index.html
@@ -53,18 +53,21 @@
   <main>
     <blockquote id="introquote">
       <p>
-        <q cite="https://en.wikiquote.org/wiki/Philosophy#N">Science rushes headlong, 
-          without selectivity, without “taste,” at whatever is knowable, in the 
-          blind desire to know all at any cost. Philosophical thinking, 
-          on the other hand, is ever on the scent of those things which are 
-          most worth knowing, the great and the important insights.
-        </q>
-        <cite><span lang="de">Friedrich Nietzsche</span>, 
-          <span class="booktitle">Philosophy in the Tragic Age of the Greeks</span>, 
-          translated by Marianne Cowan, p. 43.
-        </cite>
+        <q cite="http://www.bartleby.com/200/sw2.html">The vast accumulations of knowledge—or at least of information—deposited by the nineteenth century 
+        have been responsible for an equally vast ignorance. When there is so much to be known, when there are so many fields of knowledge in which the same words are used with different meanings, 
+        when every one knows a little about a great many things, it becomes increasingly difficult for anyone 
+        to know whether he knows what he is talking about or not. And when we do not know, or when we do not know enough, we tend always to substitute emotions for thoughts.</q>
+        <cite><span lang="de">T. S. Eliot</span>, &ldquo;The Perfect Critic&rdquo;, in <i class="booktitle">The Sacred Wood</i> (1921).</cite>
       </p>
     </blockquote>
+    <!-- 
+    <blockquote id="introquote">
+      <p>
+        <q cite="https://en.wikiquote.org/wiki/Philosophy#N">Science rushes headlong, without selectivity, without “taste,” at whatever is knowable, in the blind desire to know all at any cost. Philosophical thinking, on the other hand, is ever on the scent of those things which are most worth knowing, the great and the important insights.</q>
+        <cite><span lang="de">Friedrich Nietzsche</span>, <span class="booktitle">Philosophy in the Tragic Age of the Greeks</span>, translated by Marianne Cowan, p. 43.</cite>
+      </p>
+    </blockquote>
+    -->
 
     <p>What is science? What distinguishes science from pseudo-science?
       How do individual scientists advance their knowledge?
