The Gombrich Archive.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -101,7 +101,7 @@
       <a href="https://en.wikipedia.org/wiki/New_College_of_the_Humanities">New
       College of the Humanities</a> in London, which started offering tuition
       in 2012. 
-      <!-- @@more about HCH: https://duckduckgo.com/?q=grayling+found+humanities+london  -->
+      <!-- @@more about NCH: https://duckduckgo.com/?q=grayling+found+humanities+london  -->
     </p>
     <p>(Note: another distinction is between sciences, humanities and 
       &ldquo;<a href="https://en.wikipedia.org/wiki/Social_science">social
@@ -483,6 +483,15 @@
 
     <h2>Miscellaneous Other Links</h2>
     <ul>
+      <li>The Gombrich Archive:
+        <a href="https://gombrich.co.uk/papers-and-articles/">Papers and articles</a>:
+        papers by art historian
+        <a href="https://en.wikipedia.org/wiki/Ernst_Gombrich">Ernst Gombrich</a>
+        (1909–2001), whose works include
+        <a href="https://en.wikipedia.org/wiki/The_Story_of_Art"><i class="booktitle">The Story of Art</i></a>
+        and
+        <a href="http://yalebooks.co.uk/display.asp?K=9780300176148"><i class="booktitle">A Little History of the World</i></a>.
+      </li>
       <li>
         <a href="https://podio.com/site/creative-routines">The Daily Routines of Famous Creative People</a>,
         <i class="website">Podio</i>, no date.
