--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -616,6 +616,11 @@
         <br />Points out that philosophy tackles problems that are inherently difficult.
         Intractable problems also arise in the sciences, but scientists often prefer to ignore them.
       </li>
+      <li>
+        <a href="https://art19.com/shows/under-the-skin/episodes/9da30bd4-4fb0-469d-8963-813b13627692">Is Philosophy More Important Than Ever? (with Simon Critchley)</a>,
+        <i class="website">Under The Skin with Russell Brand</i>, 22.06.2017.
+        <!-- @@podcast -->
+      </li>
       <li>Wilson, Edward Osborne:
         <a href="https://www.youtube.com/watch?v=lx26k8LTCdI">Science, Not Philosophy, Will Explain the Meaning of Existence</a>.
         In this 10-minute video, the biologist
@@ -637,6 +642,11 @@
         who currently works at the 
         <a href="https://www.uantwerpen.be/en/rg/filop/">University of Antwerp's Centre for Philosophical Psychology</a>.
         <!-- @@todo check Loughlin's PhD thesis at http://whyphilosophyisnotdead.com/phd/ -->
+      </li>
+      <li>Blackford, Russell; Broderick, Damien, editors:
+        <i class="booktitle">Philosophy's Future: The Problem of Philosophical Progress</i>.
+        Wiley-Blackwell, 2017. (264 pages)
+        <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1119210089.html"><abbr>ISBN</abbr> 978-1-119-21008-5</a>.
       </li>
     </ul>
 
@@ -771,12 +781,11 @@
         a video by the Richard Dawkins Foundation for Reason &amp; Science.)
       </li>
       <li>
-        <a href="https://www.youtube.com/playlist?list=PLA795AB5BDDD2B0B3">Critical 
-        Reasoning for Beginners</a> is a six-part course taught in 2010 
+        <a href="https://www.youtube.com/playlist?list=PLA795AB5BDDD2B0B3">Critical Reasoning for Beginners</a> 
+        is a six-part course taught in 2010 
         by Marianne Talbot at the University of Oxford's Department for Continuing Education.
-        <a href="http://podcasts.ox.ac.uk/series/critical-reasoning-beginners">Audio 
-        versions of the lectures and slideshows</a> are available under a
-        Creative Commons licence. <br />
+        <a href="http://podcasts.ox.ac.uk/series/critical-reasoning-beginners">Audio versions of the lectures and slideshows</a>
+        are available under a Creative Commons licence. <br />
         Marianne Talbot also wrote a book based on this course:
         <a href="http://mariannetalbot.co.uk/about/marianne-talbots-books/critical-reasoning-a-romp-through-the-foothills-of-logic/"
         class="booktitle">Critical Reasoning: A Romp Through the Foothills of Logic</a>
@@ -792,8 +801,8 @@
         Each video is between 15 and 30 minutes long.
       </li>
       <li>
-        <a href="https://www.futurelearn.com/courses/logical-and-critical-thinking">Logical 
-        and Critical Thinking</a>, a free course on FutureLearn created by 
+        <a href="https://www.futurelearn.com/courses/logical-and-critical-thinking">Logical and Critical Thinking</a>, 
+        a free course on FutureLearn created by 
         <a href="http://www.arts.auckland.ac.nz/people/sdar003">Tim Dare</a> and 
         Patrick Girard of the University of Auckland.
         The <abbr title="massive open online course">MOOC</abbr> first started on 
