What Shakespeare's English sounded like.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1231,8 +1231,17 @@
     </ul>
 
     <h2 id="language">Language</h2>
-    <!-- @@todo add: Shakespeare's language -->
     <ul>
+      <li>What Shakespeare's English sounded like. See for example:
+        <ul>
+          <li>NativLang:
+            <a href="https://www.youtube.com/watch?v=WeW1eV7Oc5A">What Shakespeare's English Sounded Like - and how we know</a>.
+          </li>
+          <li>
+            <a href="https://www.youtube.com/watch?v=gPlpphT7n9s&t=18s">Shakespeare: Original pronunciation</a>.
+          </li>
+        </ul>
+      </li>
       <li>Noam Chomsky's theory of
         <a href="https://en.wikipedia.org/wiki/Universal_Grammar">Universal Grammar</a>.
       </li>
