--- a/humanities/index.html
+++ b/humanities/index.html
@@ -462,6 +462,15 @@
         <a href="http://time.com/104625/game-of-thrones-moon-door/">The Physics of the <i>Game of Thrones</i> “Moon Door”</a>,
         <i class="magazine">Time</i>, 19.05.2014.
       </li>
+      <li>Kyle Kallgren:
+        <a href="https://www.youtube.com/watch?v=cFzTKhdLdks">Game of Thrones and History - Between the Lines</a>
+        (YouTube, 10 minutes, July 2014).
+        <br />Kyle Kallgren cites Umberto Eco's paper
+        <a href="https://philpapers.org/rec/ECODOT">Dreaming of the Middle Ages</a> (1987).
+        See also
+        <a href="https://en.wikipedia.org/wiki/Neo-medievalism">neo-medievalism</a>
+        on Wikipedia.
+      </li>
     </ul>
     <p>There may be more historical inspirations than are mentioned in the above sources.
       For example, the family name
