Introquote David Hume.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -67,6 +67,12 @@
         <cite>Christopher Hitchens</cite>
       </p>
     </blockquote>
+    <blockquote id="introquote">
+      <p>
+        <q cite="https://en.wikiquote.org/wiki/David_Hume#Book_1:_Of_the_understanding">Generally speaking, the errors in religion are dangerous; those in philosophy only ridiculous.</q>
+        <cite>David Hume, <i class="booktitle">A Treatise of Human Nature</i> (1739-40)</cite>
+      </p>
+    </blockquote>
 
 
     <h2>What Should Replace Religion?</h2>
