General: This is Statistics; World of Statistics.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -95,6 +95,16 @@
     <h2>Statistics and Probability</h2>
     <ul>
       <li>
+        <a href="http://thisisstatistics.org/">This is Statistics</a>:
+        website created by the American Statistical Association.
+      </li>
+      <li>
+        <a href="http://www.worldofstatistics.org/">World of Statistics</a>:
+        a network of over 2,300 organisations that wants to increase awareness of
+        the usefulness of statistics, to nurture statistics as a profession
+        and to <q title="http://www.worldofstatistics.org/about-us/">promot[e] creativity and development in the sciences of probability and statistics</q>.
+      </li>
+      <li>
         <a href="http://stats.stackexchange.com/">Cross Validated</a>:
         <q>a question and answer site for people interested in statistics, machine learning, data analysis, data mining, and data visualization.</q>
         (Cross Validated is not a forum; see
