M. Sewell's website; NIST/SEMATECH Handbook.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -119,6 +119,16 @@
         <i class="blog">Retraction Watch</i>, 09.02.2017.
         <!-- @@check -->
       </li>
+      <li>Martin Sewell:
+        <a href="http://stats.org.uk/">Statistics <abbr>FAQ</abbr></a>.
+        The website also contains a long article on 
+        <a href="http://stats.org.uk/statistical-inference/">Statistical Inference (and What is Wrong With Classical Statistics)</a>.
+        <!-- @@check/PDF -->
+      </li>
+      <li>Carroll Croarkin; Paul Tobias, editors:
+        <a href="http://www.itl.nist.gov/div898/handbook/"><i class="booktitle"><abbr title="National Institute of Standards and Technology">NIST</abbr>/SEMATECH e-Handbook of Statistical Methods</i></a>.
+        Last updated in 2012.
+      </li>
     </ul>
 
     <p>Probability can be very counter-intuitive, see for example the Monty Hall paradox.</p>
