Geoff Cumming:  The New Statistics.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -160,6 +160,52 @@
       </li>
     </ul>
 
+    <h3>Cumming: The New Statistics</h3>
+    <ul>
+      <li>Cumming, Geoff; Calin-Jageman, Robert:
+        <i class="booktitle">Introduction to the New Statistics: Estimation, Open Science, and Beyond</i>.
+        Routledge, 2017. (564 pages)
+        <a href="https://www.routledge.com/Introduction-to-the-New-Statistics-Estimation-Open-Science-and-Beyond/Cumming-Calin-Jageman/p/book/9781138825529"><abbr>ISBN</abbr> 9781138825529</a>.
+      </li>
+      <li>Cumming, Geoff:
+        <i class="booktitle">Understanding The New Statistics: Effect Sizes, Confidence Intervals, and Meta-Analysis</i>.
+        Routledge, 2012. (522 pages)
+        <a href="https://www.routledge.com/Understanding-The-New-Statistics-Effect-Sizes-Confidence-Intervals-and/Cumming/p/book/9780415879682"><abbr>ISBN</abbr> 9780415879682</a>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=nDN-hcKR7j8">Geoff Cumming - The New Statistics - Effect Sizes, Confidence Intervals &amp; Meta-Analysis</a>:
+        27-minute video in which Geoff Cumming introduces his book
+        <i class="booktitle">Understanding The New Statistics</i>.
+      </li>
+      <li>
+        <a href="https://thenewstatistics.com/itns/">Introduction to the New Statistics</a>:
+        companion website with a blog, the software <abbr title="Exploratory Software for Confidence Intervals">ESCI</abbr> and links.
+        The website is maintained by Professor
+        <a href="http://www.latrobe.edu.au/she/staff/profile?uname=GDCumming">Geoff Cumming</a>.
+      </li>
+      <li>
+        <a href="http://www.latrobe.edu.au/news/articles/2011/article/why-we-need-the-new-statistics">Why we need ‘The New Statistics’</a>,
+        News, La Trobe University, 28 July 2011.
+      </li>
+      <li>The New Statistics: Estimation and Research Integrity:
+        <a href="https://www.youtube.com/watch?v=iJ4kqk3V8jQ">Segment 1: Confidence Intervals, <abbr>NHST</abbr>, and p values</a>,
+        <a href="https://www.youtube.com/watch?v=wb0rnZBlcRg">Segment 2: Research Integrity and The New Statistics</a>,
+        <a href="https://www.youtube.com/watch?v=1P2yV6joYlc">Segment 3: Effect Sizes and Confidence Intervals</a>,
+        <a href="https://www.youtube.com/watch?v=QYNJMAqZvBQ">Segment 4: The New Statistics in Action</a>,
+        <a href="https://www.youtube.com/watch?v=Np4lxvS8C-E">Segment 5: Planning, Power, and Precision</a>,
+        <a href="https://www.youtube.com/watch?v=2CBIQDoHCKU">Segment 6: Meta-Analysis and Meta-Analytic Thinking</a>
+        (<a href="https://www.youtube.com/playlist?list=PLMOU-iLiJIc1ea_DMgvMznUMwboIqNiEW">full playlist</a>):
+        6 videos (each between 25 and 40 minutes) from a workshop with Geoff Cumming, 
+        recorded at the 26th <abbr title="Association for Psychological Science">APS</abbr> Annual Convention in May 2014 
+        (produced by the Association for Psychological Science).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/user/geoffdcumming/videos">Geoff Cumming's YouTube channel</a>,
+        which contains many lecture videos about statistics.
+        <!-- @@list all videos in logical order, since there is no playlist -->
+      </li>
+    </ul>
+
     <h3>Bayesian Probability and Bayes' Theorem</h3>
     <ul>
       <li>Wireless Philosophy:
