--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -160,7 +160,7 @@
       </li>
     </ul>
 
-    <h3>Cumming: The New Statistics</h3>
+    <h3>Geoff Cumming: The New Statistics</h3>
     <ul>
       <li>Cumming, Geoff; Calin-Jageman, Robert:
         <i class="booktitle">Introduction to the New Statistics: Estimation, Open Science, and Beyond</i>.
@@ -228,14 +228,64 @@
       </li>
     </ul>
 
-    <!-- Book recommendations from ResearchGate (https://www.researchgate.net/post/What_statistical_book_do_you_prefer_of_all_time and related questions):
-      * Mildred L. Patten: Understanding Research Methods: An Overview of the Essentials (Ninth Edition). Pyrczak Publishing, 2014. 220 pages. http://www.pyrczak.com/textbooks/research-methods/understanding-research-methods 
-      * Andy Field; Jeremy Miles; Zoë Field: Discovering Statistics Using R. SAGE Publishing, 2012. 992 pages. https://uk.sagepub.com/en-gb/eur/discovering-statistics-using-r/book236067 & https://studysites.uk.sagepub.com/dsur/main.htm & https://www.youtube.com/watch?v=oqiycHADBZY & http://www.statisticshell.com/html/dsur.html 
-      * OpenIntro Statistics. Third edition, 2015. 436 pages: https://www.openintro.org/stat/textbook.php?stat_book=os 
-      * Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani: An Introduction to Statistical Learning with Applications in R. http://www-bcf.usc.edu/~gareth/ISL/ 
-      * Cochran, William G. (1977). Sampling Techniques, 3rd edn. Wiley. New York. 448 pages: http://eu.wiley.com/WileyCDA/WileyTitle/productCd-047116240X.html 
-      * William L. Hays: Statistics. 
-    -->
+    <h3>Various Statistics Books</h3>
+    <ul>
+      <li>Schmuller, Joseph:
+        <i class="booktitle">Statistical Analysis With Excel for Dummies</i>.
+        4th edition. John Wiley &amp; Sons, 2016. (552 pages)
+        <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1119271150.html"><abbr>ISBN</abbr> 978-1-119-27115-4</a>.
+        <!-- @@2 bonus chapters on website; good reviews at https://www.amazon.com/Statistical-Analysis-Dummies-Joseph-Schmuller/dp/1119271150/ -->
+      </li>
+      <li>Stigler, Stephen M.:
+        <i class="booktitle">Statistics on the Table: The History of Statistical Concepts and Methods</i>.
+        Harvard University Press, 2002. (504 pages)
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674009790"><abbr>ISBN</abbr> 9780674009790</a>.
+      </li>
+      <li>Patten, Mildred L.; Newhart, Michelle:
+        <i class="booktitle">Understanding Research Methods: An Overview of the Essentials</i>.
+        10th edition. Routledge, 2018. (338 pages)
+        <a href="https://www.routledge.com/Understanding-Research-Methods-An-Overview-of-the-Essentials/Patten-Newhart/p/book/9780415790529"><abbr>ISBN</abbr> 9780415790529</a>.
+        (Originally published by Pyrczak Publishing, until the ninth edition in 2014.)
+        <!-- Recommended on ResearchGate (https://www.researchgate.net/post/What_statistical_book_do_you_prefer_of_all_time and related questions)  -->
+      </li>
+      <li>Field, Andy; Miles, Jeremy; Field, Zoë:
+        <i class="booktitle">Discovering Statistics Using R</i>.
+        SAGE Publishing, 2012. (992 pages)
+        <a href="https://uk.sagepub.com/en-gb/eur/discovering-statistics-using-r/book236067"><abbr>ISBN</abbr> 9781446200469</a>.
+        (See also <a href="https://studysites.uk.sagepub.com/dsur/main.htm">companion website</a>,
+        <a href="https://www.discoveringstatistics.com/books/discovering-statistics-using-r/">DiscoveringStatistics.com</a>,
+        <a href="https://www.youtube.com/watch?v=oqiycHADBZY">7-minute video by Andy Field introducing the books</a>.)
+        <!-- Recommended on ResearchGate (https://www.researchgate.net/post/What_statistical_book_do_you_prefer_of_all_time and related questions)  -->
+      </li>
+      <li>
+        <i class="booktitle">OpenIntro Statistics</i>. 3rd edition, 2015. (436 pages)
+        <a href="https://www.openintro.org/stat/textbook.php?stat_book=os">Free download</a>.
+        <!-- Recommended on ResearchGate (https://www.researchgate.net/post/What_statistical_book_do_you_prefer_of_all_time and related questions)  -->
+        <!-- @@download -->
+      </li>
+      <li>James, Gareth; Witten, Daniela; Hastie, Trevor; Tibshirani, Robert:
+        <i class="booktitle">An Introduction to Statistical Learning with Applications in R</i>.
+        <a href="http://www-bcf.usc.edu/~gareth/ISL/">7th edition as downloadable <abbr>PDF</abbr></a>.
+        <!-- Recommended on ResearchGate (https://www.researchgate.net/post/What_statistical_book_do_you_prefer_of_all_time and related questions)  -->
+      </li>
+      <li>Cochran, William G.:
+        <i class="booktitle">Sampling Techniques</i>. 3rd edition. New York: Wiley, 1977. (448 pages)
+        <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-047116240X.html"><abbr>ISBN</abbr> 978-0-471-16240-7</a>.
+        <!-- Recommended on ResearchGate (https://www.researchgate.net/post/What_statistical_book_do_you_prefer_of_all_time and related questions)  -->
+      </li>
+      <li>Hays, William H.:
+        <i class="booktitle">Statistics</i>. Fort Worth: Harcourt Brace College Publishers, 1994.
+      </li>
+      <!--
+      <li>
+        <a href=""></a>
+      </li>
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
+    </ul>
   </main>
 
   <footer>
