--- a/humanities/index.html
+++ b/humanities/index.html
@@ -488,6 +488,10 @@
       <br /><a href="https://en.wikipedia.org/wiki/Tywin_Lannister">Tywin Lannister</a>'s first name
       looks almost identical to the name of the Welsh town
       <a href="https://en.wikipedia.org/wiki/Tywyn">Tywyn</a>, but the pronunciation is quite different.
+      The pie made out of his two sons that Walder Frey eats was probably inspired by the end of
+      Shakespeare's play 
+      <a href="https://en.wikipedia.org/wiki/Titus_Andronicus">Titus Andronicus</a>,
+      where Titus serves Tamora a pie made from the flesh of her sons Chiron and Demetrius.
     </p>
     <!-- Game of Thrones Cello Cover - Break of Reality: https://www.youtube.com/watch?v=ydRAb9cwHnA -->
 
