APS: Improving Reproducibility of Research.

--- a/science/index.html
+++ b/science/index.html
@@ -535,6 +535,10 @@
         See <strong><a href="http://f1000research.com/channels/PRR"><i>Preclinical Reproducibility and Robustness</i></a></strong> on
         F1000Research.
       </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLMOU-iLiJIc0amNVabGXJ0liKwIwxqkO8">Improving the Reproducibility of Our Research Practices</a>,
+        a series of 6 YouTube videos by the Association for Psychological Science (2016).
+      </li>
     </ul>
 
     <h3>Scientific Misconduct</h3>
